src/tests/valid_programs/prog5.sdw
GRANJA
SEMILLA base := 8;
SEMILLA altura := 6;
SEMILLA area := base * altura;
MOSTRAR area;
CIERRE