src/tests/invalid_programs/error5.sdw
GRANJA
SEMILLA resultado := (5 + 3;
MOSTRAR resultado;
CIERRE